--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,13 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'  // 롬북 라이브러리
     testImplementation 'org.springframework.boot:spring-boot-starter-test'  // 스프링부트 테스트 라이브러리
     runtimeOnly 'com.mysql:mysql-connector-j' // mysql 라이브러리
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'  // 스프링데이터 jpa
+    /*
+        ORM : 객체 관계 매핑
+
+        자바           ORM[jpa]             DB[SQL]
+        <------------------매핑----------------->
+     */
 }
 
 tasks.named('test') {
