--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ spring.datasource.password=1234
 # 3. JPA
 ## 3-1 DDL ????
 ### spring.jpa.hibernate.ddl-auto = create   ?? ??? DB ???
-spring.jpa.hibernate.ddl-auto = create
+#spring.jpa.hibernate.ddl-auto = create
 ### spring.jpa.hibernate.ddl-auto = update  ?? ??? ??? ???? ??[????]
-#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = update
 
 ## 3-2 ??? sql ? console ????
 spring.jpa.properties.hibernate.show_sql = true
