--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'  // 스프링데이터 jpa
     implementation 'org.springframework.boot:spring-boot-starter-mail' // 스프링 메일 전송 SMTP
     implementation 'org.springframework.boot:spring-boot-starter-security' // 스프링 시큐리티 [인증/인가]
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' // oauth2 [ sns 인증 소셜 로그인 ]
     /*
         ORM : 객체 관계 매핑
 
