--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,3 +50,21 @@ spring.security.oauth2.client.provider.kakao.token-uri = https://kauth.kakao.com
 spring.security.oauth2.client.provider.kakao.user-info-uri = https://kapi.kakao.com/v2/user/me
 spring.security.oauth2.client.provider.kakao.user-name-attribute = kakao_account
 
+# oauth2 naver
+spring.security.oauth2.client.registration.naver.client-id =WLDrDIgBWkV5WnhoM3yn
+spring.security.oauth2.client.registration.naver.client-secret =E7r79KGkbY
+spring.security.oauth2.client.registration.naver.scope = nickname,email
+
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.client-name=naver
+
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
+# oauth2 google
+spring.security.oauth2.client.registration.google.client-id =1026444506914-n9ivjdb249qoadll66pkhsqnp3eoqdjp.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret =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
+spring.security.oauth2.client.registration.google.scope = email , profile
