--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -68,3 +68,7 @@ spring.security.oauth2.client.provider.naver.user-name-attribute=response
 spring.security.oauth2.client.registration.google.client-id =1026444506914-n9ivjdb249qoadll66pkhsqnp3eoqdjp.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret =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
 spring.security.oauth2.client.registration.google.scope = email , profile
+
+
+# view controller ---> react build file [js]
+spring.mvc.pathmatch.matching-strategy = ant_path_matcher
